// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the ExpensesSummary correctly with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       expense
       totalling 
      <span>
        $1.12
      </span>
      .
      <div
        className="page-header__actions"
      >
        <Link
          className="button button--add-expense"
          replace={false}
          to="/create"
        >
          Add Expense
        </Link>
      </div>
    </h1>
  </div>
</div>
`;

exports[`should render the ExpensesSummary correctly with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        21
      </span>
       expense
      s
       totalling 
      <span>
        $113,344,556.62
      </span>
      .
      <div
        className="page-header__actions"
      >
        <Link
          className="button button--add-expense"
          replace={false}
          to="/create"
        >
          Add Expense
        </Link>
      </div>
    </h1>
  </div>
</div>
`;
